AX: aria-labelledby-on-password-input fails in ITM https://bugs.webkit.org/show_bug.cgi?id=260190 rdar://113885331

Reviewed by Andres Gonzalez.

Previously in ITM, if an element had `aria-labelledby`, changes to the labeling element would not update the node of the labeled element. This patch adds logic inside the `handleChildrenChanged` method to notify the labeled elements when the value of a labeling element changes.

* LayoutTests/accessibility-isolated-tree/TestExpectations
* LayoutTests/accessibility/aria-labelledby-on-password-input.html:

Update layout tests to wait for async value change.

* LayoutTests/platform/glib/TestExpectations

Skip on GTK/WPE.

* Source/WebCore/accessibility/AXObjectCache.cpp
(WebCore::AXObjectCache::handleChildrenChanged):

Checks if self or ancestors label other elements, and updats the labeled (related) elements.

* LayoutTests/accessibility/aria-labelledby-text-expected.txt: Added.
* LayoutTests/accessibility/aria-labelledby-text.html: Added.

New tests to check that text changes, attribute changes, for labelledby elements update properly.

Canonical link: https://commits.webkit.org/267086@main